--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,1 +1,17 @@
-Players index placeholder
+<table class='players-table'>
+   <tbody>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Win Count</th>
+      </tr> 
+      
+      <% @players.each do |player| %>
+        <tr>
+          <td><%= player.first_name %></td>
+          <td><%= player.last_name %></td>
+          <td><%= player.win_count %></td>
+        </tr>
+      <% end %>
+   </tbody>
+</table>
