--- a/app/views/hands/index.html.erb
+++ b/app/views/hands/index.html.erb
@@ -7,7 +7,6 @@
         <th>Cards Dealt</th>
         <th>Rank</th>
         <th>Was Winning Hand?</th>
-        <th>Reference ID</th>
       </tr> 
       
       <% @hands.each do |hand| %>
@@ -18,7 +17,6 @@
           <td><%= render "shared/visual_hand", hand: hand %></td>
           <td><%= hand.rank %></td>
           <td><%= hand.winner? %></td>
-          <td><%= hand.hand_reference_id %></td>
         </tr>
       <% end %>
    </tbody>
@@ -26,9 +24,9 @@
 
 <section>
   <% if @page == 1 %>
-    <%= link_to 'Next Page', games_path(page: @page + 1) %>
+    <%= link_to 'Next Page', hands_path(page: @page + 1) %>
   <% else %>
-    <%= link_to 'Prev Page', games_path(page: @page - 1) %>
-    <%= link_to 'Next Page', games_path(page: @page + 1) %>
+    <%= link_to 'Prev Page', hands_path(page: @page - 1) %>
+    <%= link_to 'Next Page', hands_path(page: @page + 1) %>
   <% end %>
 </section>
